--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="name">Handstand Pushups</string>
     <string name="star">Advanced</string>
     <string name="note">The handstand push-up (press-up) - also called the vertical push-up (press-up) or the inverted push-up (press-up) also called \"commandos\"- is a type of push-up exercise where the body is positioned in a handstand. To prepare the strength until one has built adequate balance.</string>
+    <string name="comment">12</string>
+    <string name="like">154</string>
+    <string name="push">Pushups</string>
+    <string name="pushup">A push-up (or press-up if the hands are wider than shoulders placing more emphasis on the pectoral muscles) is a common calisthenics exercise beginning from the prone position, or the front leaning rest position known in the military.</string>
+    <string name="dip">Dips</string>
+    <string name="dips">A dip is an upper-body strength exercise. Narrow, shoulder-width dips primarily train the triceps, with major synergists being the anterior deltoid, the pectoralis muscles (sternal, clavicular, and minor), and the rhomboid muscles of the back (in that order).</string>
 </resources>
